src/c/dynamics.h

/**
 * @defgroup dynamics_matrix Matrix and general kinematics
 * @{
 */
/**
 * Multiply two column-major matrices: c = alpha*a*b + beta*c.
 */
/**
 * @param m Rows of a and c.
 * @param n Columns of b and c.
 * @param k Inner dimension.
 * @param alpha Scale factor for a*b.
 * @param a First matrix.
 * @param lda Leading dimension of a.
 * @param b Second matrix.
 * @param ldb Leading dimension of b.
 * @param beta Scale factor for c.
 * @param c Matrix updated in place.
 * @param ldc Leading dimension of c.
 */
void c_matmul(int m, int n, int k, double alpha, const double *a, int lda,
    const double *b, int ldb, double beta, double *c, int ldc);
/**
 * Compute the cross product of two three-vectors.
 * @param x First vector.
 * @param y Second vector.
 * @param z Output vector.
 */
void c_cross_product(const double x[3], const double y[3], double z[3]);
/**
 * Form a skew-symmetric matrix from a three-vector.
 * @param x Input vector.
 * @param y Output matrix.
 * @param ldy Leading dimension of y.
 */
void c_to_skew_symmetric(const double x[3], double *y, int ldy);
/**
 * Compute the angle between two vectors.
 * @param x First vector.
 * @param y Second vector.
 * @return Angle in radians.
 */
double c_vector_angle(const double x[3], const double y[3]);
/**
 * Compute the scalar projection of one vector onto another.
 * @param x Vector being projected.
 * @param y Reference vector.
 * @return Scalar projection.
 */
double c_scalar_projection(const double x[3], const double y[3]);
/**
 * Project one vector onto another.
 * @param x Vector being projected.
 * @param y Reference vector.
 * @param z Output projection.
 */
void c_vector_projection(const double x[3], const double y[3], double z[3]);
/**
 * Compute a vector magnitude.
 * @param n Vector length.
 * @param x Vector.
 * @return Euclidean magnitude.
 */
double c_vector_magnitude(int n, const double *x);
/**
 * Normalize a vector in place.
 * @param n Vector length.
 * @param x Vector updated in place.
 */
void c_vector_normalize(int n, double *x);
/**
 * Compute a dot product.
 * @param n Vector length.
 * @param x First vector.
 * @param y Second vector.
 * @return Dot product.
 */
double c_dot_product(int n, const double *x, const double *y);